force-app/main/default/objects/CAP_Credit_Papers__c/CAP_Credit_Papers__c.object-meta.xml
<CustomObject>
    <description>Object used to house Credit Reviews &amp; Credit Summaries</description>
    <label>Credit Paper</label>
    <nameField>
        <label>Credit Papers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Papers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>