force-app/main/default/objects/CAP_Credit_Papers__c/fields/CAP_Business_Overview__c.field-meta.xml
<CustomField>
    <fullName>CAP_Business_Overview__c</fullName>
    <label>Business Overview</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>