force-app/main/default/objects/CAP_Credit_Papers__c/fields/CAP_Financial_Performance__c.field-meta.xml
<CustomField>
    <fullName>CAP_Financial_Performance__c</fullName>
    <label>Financial Performance</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>