force-app/main/default/objects/CAP_Credit_Papers__c/fields/CAP_Jurisdiction_Country_Risk__c.field-meta.xml
<CustomField>
    <fullName>CAP_Jurisdiction_Country_Risk__c</fullName>
    <label>Jurisdiction / Country Risk</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>