force-app/main/default/objects/CAP_Credit_Papers__c/fields/CAP_Outlook_3_Year__c.field-meta.xml
<CustomField>
    <fullName>CAP_Outlook_3_Year__c</fullName>
    <label>Outlook (3 Year)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>