force-app/main/default/objects/CAP_Credit_Papers__c/fields/Date_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Review__c</fullName>
    <label>Date of Review</label>
    <required>true</required>
    <type>Date</type>
</CustomField>