force-app/main/default/objects/CAP_Credit_Papers__c/fields/Unique_Reference__c.field-meta.xml
<CustomField>
    <fullName>Unique_Reference__c</fullName>
    <displayFormat>CR{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Unique Reference</label>
    <type>AutoNumber</type>
</CustomField>