force-app/main/default/objects/CAP_Credit_Papers__c/recordTypes/Credit_Review.recordType-meta.xml
<RecordType>
    <fullName>Credit_Review</fullName>
    <active>true</active>
    <description>Detailed Credit Review</description>
    <label>Credit Review</label>
</RecordType>