force-app/main/default/objects/CAP_Credit_Papers__c/recordTypes/Credit_Summary.recordType-meta.xml
<RecordType>
    <fullName>Credit_Summary</fullName>
    <active>true</active>
    <description>Credit Summary</description>
    <label>Credit Summary</label>
</RecordType>